--- a/index.html
+++ b/index.html
@@ -2,37 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ATLAS Chat</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ATLAS - Interface</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="google" content="notranslate">
     <meta http-equiv="Content-Language" content="en">
 </head>
-<body>
-    <header class="app-header">
-        <h1>ATLAS Chat</h1>
-    </header>
-    <main class="chat-container">
-        <div id="chat-messages" class="atlas-messages"></div>
-    </main>
+<body style="min-height:100vh;">
+    <div class="atlas-messages" id="chat-messages"></div>
     <form id="atlas-form" autocomplete="off">
         <div class="messageBox">
             <div class="fileUploadWrapper">
                 <label for="file">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 337 337">
-                        <circle stroke-width="20" stroke="#6c6c6c" fill="none" r="158.5" cy="168.5" cx="168.5"></circle>
-                        <path stroke-linecap="round" stroke-width="25" stroke="#6c6c6c" d="M167.759 79V259"></path>
-                        <path stroke-linecap="round" stroke-width="25" stroke="#6c6c6c" d="M79 167.138H259"></path>
+                        <circle
+                        stroke-width="20"
+                        stroke="#6c6c6c"
+                        fill="none"
+                        r="158.5"
+                        cy="168.5"
+                        cx="168.5"
+                        ></circle>
+                        <path
+                        stroke-linecap="round"
+                        stroke-width="25"
+                        stroke="#6c6c6c"
+                        d="M167.759 79V259"
+                        ></path>
+                        <path
+                        stroke-linecap="round"
+                        stroke-width="25"
+                        stroke="#6c6c6c"
+                        d="M79 167.138H259"
+                        ></path>
                     </svg>
                     <span class="tooltip">Add an image</span>
                 </label>
                 <input type="file" id="file" name="file" />
             </div>
-            <input required placeholder="Message..." type="text" id="messageInput" name="prompt" />
+            <input required="" placeholder="Message..." type="text" id="messageInput" name="prompt" />
             <button id="sendButton" type="submit">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 664 663">
-                    <path fill="none" d="M646.293 331.888L17.7538 17.6187L155.245 331.888M646.293 331.888L17.753 646.157L155.245 331.888M646.293 331.888L318.735 330.228L155.245 331.888" />
-                    <path stroke-linejoin="round" stroke-linecap="round" stroke-width="33.67" stroke="#6c6c6c" d="M646.293 331.888L17.7538 17.6187L155.245 331.888M646.293 331.888L17.753 646.157L155.245 331.888M646.293 331.888L318.735 330.228L155.245 331.888" />
+                <path
+                    fill="none"
+                    d="M646.293 331.888L17.7538 17.6187L155.245 331.888M646.293 331.888L17.753 646.157L155.245 331.888M646.293 331.888L318.735 330.228L155.245 331.888"
+                ></path>
+                <path
+                    stroke-linejoin="round"
+                    stroke-linecap="round"
+                    stroke-width="33.67"
+                    stroke="#6c6c6c"
+                    d="M646.293 331.888L17.7538 17.6187L155.245 331.888M646.293 331.888L17.753 646.157L155.245 331.888M646.293 331.888L318.735 330.228L155.245 331.888"
+                ></path>
                 </svg>
             </button>
         </div>
