--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <line x1="12" y1="5" x2="12" y2="19"></line>
                         <line x1="5" y1="12" x2="19" y2="12"></line>
                     </svg>
-                    Nouvelle session
+                    New Session
                 </button>
             </div>
             <div class="sessions-list" id="sessions-list">
@@ -28,8 +28,8 @@
             <div class="session-container">
                 <div class="messages" id="messages">
                     <div class="welcome-message">
-                        <h2>Bienvenue dans ATLAS</h2>
-                        <p>Votre assistant IA personnel. Posez une question pour commencer.</p>
+                        <h2>Welcome to ATLAS</h2>
+                        <p>Your personal AI assistant. Ask a question to get started.</p>
                     </div>
                 </div>
                 
@@ -37,7 +37,7 @@
                     <div class="input-container">
                         <textarea 
                             id="message-input" 
-                            placeholder="Tapez votre message..."
+                            placeholder="Type your message..."
                             rows="1"
                             maxlength="4000"
                         ></textarea>
@@ -54,6 +54,6 @@
     </div>
     
     <div id="toast-container"></div>
-    <script src="js/app.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
