--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 <body>
     <div id="app">
         <aside class="sidebar">
-            <div class="sidebar-header">
-                <button id="new-session-btn" class="new-session-btn">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <line x1="12" y1="5" x2="12" y2="19"></line>
-                        <line x1="5" y1="12" x2="19" y2="12"></line>
-                    </svg>
-                    New Session
-                </button>
+            <div class="sidebar-header" title="Ctrl+Shift+N for new session">
+                <div class="sessions-header">
+                    <h3>Conversations</h3>
+                    <span class="shortcut-hint">Ctrl+Shift+N</span>
+                </div>
             </div>
             <div class="sessions-list" id="sessions-list">
             </div>
