--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div id="app">
         <aside class="sidebar">
-            <div class="sidebar-header" title="Ctrl+Shift+N for new session">
+            <div class="sidebar-header" title="Ctrl+N for new session">
                 <div class="sessions-header">
                     <h3>Conversations</h3>
-                    <span class="shortcut-hint">Ctrl+Shift+N</span>
+                    <span class="shortcut-hint">Ctrl+N</span>
                 </div>
             </div>
             <div class="sessions-list" id="sessions-list">
