--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <meta name="google" content="notranslate">
     <meta name="robots" content="notranslate">
     <title>ATLAS</title>
+    <meta name="description" content="A privacy-first AI assistant interface that stores data locally in your browser">
+    <meta name="author" content="ATLAS Team">
+    <meta name="application-name" content="ATLAS">
+    <meta name="theme-color" content="#0A0A0A">
+    <meta name="msapplication-TileColor" content="#0A0A0A">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="ATLAS">
+    <link rel="manifest" href="manifest.json">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="resources/icons/icon-192.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
